Made checquered background fixed whilst scrolling instrucctions (on smaller screens)

--- a/src/Chromesthesia.WebInterface/Content/SurveyStyle.css
+++ b/src/Chromesthesia.WebInterface/Content/SurveyStyle.css
@@ -3,9 +3,6 @@
     height: 100%;
     padding: 0;
     margin: 0;
-    background-image: url("Images/check.png");
-    background-repeat: repeat;
-    background-size: 2%;
 }
 
 a {
@@ -38,61 +35,18 @@ hr {
     margin-right: 25%
 }
 
-#introBackground {
-    width: 50%;
-    height: auto;
-    z-index: 1;
-    position: absolute;
-    margin: auto;
-    top: 13%;
-    left: 25%;
-    border: 5px solid #515269;
-    background-color: #eeeeff;
-    -webkit-box-shadow: 0px 12px 29px -4px rgba(0,0,0,0.79);
-    -moz-box-shadow: 0px 12px 29px -4px rgba(0,0,0,0.79);
-    box-shadow: 0px 12px 29px -4px rgba(0,0,0,0.79);
-}
-
-#introTop {
+#survey {
     width: 100%;
-    height: auto;
-    margin-top: 5%;
-}
-
-#introMid {
-    width: 100%;
-    height: auto;
-    text-align: center;
-    font-family: 'Montserrat', sans-serif;
-    color: #515269;
-}
-
-#introBottom {
-    width: 100%;
-    height:auto;
-}
-
-#start {
-    min-width: 20%;
-    height: 50%;
-    margin-left: 40%;
-    margin-top: 2%;
-    margin-bottom: 4%;
-    border: none;
-    border-bottom: 1px solid #A2A2B9;
-    border-top: 2px solid #ffffff;
-    background-color: #D1D1DC;
-    outline: none;
-    cursor: pointer;
-    font-size: large;
-    font-weight: bold;
-    letter-spacing: 2px;
-    font-family: 'Montserrat', sans-serif;
-    color: #515269;
+    height: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    background-image: url("Images/check.png");
+    background-repeat: repeat;
+    background-size: 2%;
 }
 
 #topBar {
-    position: fixed;
     width: 100%;
     height: 6%;
     background-color: #515269;
@@ -125,8 +79,6 @@ hr {
 }
 
 #centre {
-    position: fixed;
-    top: 6%;
     width: 100%;
     height: 91%;
 }
@@ -173,9 +125,63 @@ hr {
 }
 
 #bottomBar {
-    position: fixed;
-    bottom: 0;
     width: 100%;
-    min-height: 3%;
+    height: 3%;
     background-color: #515269;
+    -webkit-box-shadow: 0 0 13px -2px rgba(0,0,0,1);
+    -moz-box-shadow: 0 0 13px -2px rgba(0,0,0,1);
+    box-shadow: 0 0 13px -2px rgba(0,0,0,1);
+}
+
+#intro {
+    width: 50%;
+    height: auto;
+    z-index: 1;
+    position: absolute;
+    margin: auto;
+    top: 13%;
+    left: 25%;
+    border: 5px solid #515269;
+    background-color: #eeeeff;
+    -webkit-box-shadow: 0px 12px 29px -4px rgba(0,0,0,0.79);
+    -moz-box-shadow: 0px 12px 29px -4px rgba(0,0,0,0.79);
+    box-shadow: 0px 12px 29px -4px rgba(0,0,0,0.79);
+}
+
+#introTop {
+    width: 100%;
+    height: auto;
+    margin-top: 5%;
+}
+
+#introMid {
+    width: 100%;
+    height: auto;
+    text-align: center;
+    font-family: 'Montserrat', sans-serif;
+    color: #515269;
+}
+
+#introBottom {
+    width: 100%;
+    height:auto;
+}
+
+#start {
+    min-width: 20%;
+    height: 60%;
+    margin-top: 2%;
+    margin-bottom: 4%;
+    margin-left: 40%;
+    border: none;
+    border-bottom: 1px solid #A2A2B9;
+    border-top: 2px solid #ffffff;
+    background-color: #D1D1DC;
+    outline: none;
+    cursor: pointer;
+    font-size: large;
+    font-weight: bold;
+    letter-spacing: 2px;
+    font-family: 'Montserrat', sans-serif;
+    color: #515269;
 }
